--- a/2PDE.lyx
+++ b/2PDE.lyx
@@ -17179,7 +17179,7 @@ Cíl je mít pravou stranu rovnou něčemu měřitlnému v
 
  neschová do sumy.
  Nicméně vše je stále v pohodě, protože nový člen 
-\begin_inset Formula $K_{j}^{i}$
+\begin_inset Formula $K_{n}^{i}$
 \end_inset
 
  je také spojitý v 
