--- a/2PDE.tex
+++ b/2PDE.tex
@@ -5018,7 +5018,7 @@ $u^{n}$:
 Cíl je mít pravou stranu rovnou n\v{e}\v{c}emu m\v{e}\v{r}itlnému
 v $t$ a spojitému v $d$. Rozdíl oproti teorii, kde bylo $c$ lineární
 je ten, ¸e na pravé stran\v{e} se $d$ neschová do sumy. Nicmén\v{e}
-v¨e je stále v pohod\v{e}, proto¸e nový \v{c}len $K_{j}^{i}$ je také
+v¨e je stále v pohod\v{e}, proto¸e nový \v{c}len $K_{n}^{i}$ je také
 spojitý v $d$ jako sou\v{c}et spojitých funkcí. Prost\v{e} Caratheodoryova
 v\v{e}ta.
 \begin{eqnarray*}
